--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Sudoku Solver</title>
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="/jquery-1.11.3.min.js"></script>
 <style>
 #sudokuProcess{color: rgb(90,255,0); background: black; font-size:1.5em;}
 .otherColor{background: rgb(90,255,0);}
